--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background: url('background image.jpg') no-repeat center center;
+      background: url('background.jpg') no-repeat center center;
       background-size: cover;
     }
 
