--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   height: 100vh;
   background: url('background2.jpg') no-repeat center center;
   background-size: contain; /* باش تبان الصورة كاملة بلا Zoom */
-  background-color: #195221;    /* لون أسود إذا كانت الصورة ما كتغطيش كامل الشاشة */
+  background-color: #437b70;    /* لون أسود إذا كانت الصورة ما كتغطيش كامل الشاشة */
 }
 
 
@@ -25,15 +25,15 @@
       position: absolute;
       top: 55%;  /* هنا كتحدد البلاصة فين غادي يبانوا */
       left: 40%;
-      transform: translate(-50%, -50%); /* باش يجي فالنص */
+      transform: translate(-55%, -100%); /* باش يجي فالنص */
       display: flex;
       flex-direction: column;
       gap: 20px;
     }
 
     .btn {
-      padding: 15px 30px;
-      font-size: 20px;
+      padding: 15px 20px;
+      font-size: 15px;
       color: white;
       text-decoration: none;
       border-radius: 120px;
