--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
       left: 15%;  /* عدل هاد القيمة حسب فين باغيها */
       transform: translate(-50%, -50%);
     }
+    .btn-contact-position {
+  position: absolute;
+  bottom: 8%;
+  left: 15%;
+  transform: translate(-50%, 0);
+}
+
 
     @media (max-width: 600px) {
       .button-container {
@@ -93,7 +100,8 @@
       <a class="btn btn-whatsapp" href="https://wa.me/qr/QIRTSVAF2MI7B1" target="_blank">WhatsApp</a>
       <a class="btn btn-instagram" href="https://www.instagram.com/with_simo.8?igsh=NmVzMXhjYTB4dDVs" target="_blank">Instagram</a>
     </div>
-    <a class="btn btn-contact" href="https://www.instagram.com/sofiane.el4" target="_blank">@sofiane.el4</a>
+    <a class="btn btn-contact btn-contact-position" href="https://www.instagram.com/sofiane.el4" target="_blank">@sofiane.el4</a>
+
   </div>
 </body>
 </html>
