--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <a class="btn btn-whatsapp" href="https://wa.me/qr/QIRTSVAF2MI7B1" target="_blank">WhatsApp</a>
       <a class="btn btn-instagram" href="https://www.instagram.com/with_simo.8?igsh=NmVzMXhjYTB4dDVs" target="_blank">Instagram</a>
     </div>
-    <a class="btn btn-contact btn-contact-position" href="https://www.instagram.com/sofiane.el4" target="_blank">@sofiane.el4</a>
+    <a class="btn btn-contact btn-contact-position" href="https://www.instagram.com/sofiane.eh4" target="_blank">@sofiane.eh4</a>
 
   </div>
 </body>
